# bagua

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  cliff.toml  conf.py  doc-requirements.txt  index.rst  install.sh  install_master.sh  install_v2.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.buildkite/: pipeline.yml
.buildkite/scripts/: benchmark.sh  benchmark_master.sh  benchmark_worker.sh  example.sh  examples_consistency_master.sh  examples_consistency_worker.sh  install_bagua.sh  run_pytest.sh  test.sh
.github/: CODEOWNERS  dependabot.yml  issue-close-app.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: benchmark.sh
.github/workflows/: bagua-net-ci.yml  bagua-pypi-publish.yml  bagua-python-package-check.yml  black.yml  codeql-analysis.yml  convergence.yml  dockerhub.yml  flake8.yml  mypy.yml  pypi-publish.yml  python-package-check.yml  pytype.yml  rustfmt.yml
.test_to_migrate/: test_communication.py  test_flatten.py  test_fused_optimizer.py
.test_to_migrate/nccl/: test_gather.py  test_p2p.py
.test_to_migrate/qsgd/: test_norm_qsgd.py  utils.py
.test_to_migrate/tools/: test_loadbalance.py
bagua/: __init__.py  bagua_define.py  version.py
bagua-core/: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  MANIFEST.in  README.md  pyproject.toml  setup.py
bagua-core/bagua-core-c/: Cargo.toml
bagua-core/bagua-core-internal/: Cargo.toml  build.rs
bagua-core/bagua-core-py/: Cargo.toml  __init__.py  __init__.pyi  version.py
bagua-core/bagua-core-py/examples/: main.py  test_compression.py
bagua-core/bagua-core-py/src/: lib.rs
bagua-core/bagua-opentelemetry/: Cargo.toml
bagua-core/bagua_install_library/: install_library.py
bagua-net/: Cargo.toml  LICENSE  README.md
bagua-net/.github/workflows/: ci.yml  release.yml
bagua-net/cc/: Makefile  bagua_net.cc  bagua_net.h
bagua-net/cc/v3/: nccl_net_v3.cc  nccl_net_v3.h
bagua-net/cc/v4/: nccl_net_v4.h
bagua-net/src/: bagua_net.rs  lib.rs  utils.rs
bagua-net/src/implement/: mod.rs  tokio_backend.rs
bagua/autotune/: __init__.py
bagua/distributed/: launch.py  run.py
bagua/script/: __init__.py  bagua_sys_perf  baguarun.py
bagua/service/: __init__.py  autotune.py  autotune_service.py  autotune_system.py  autotune_task_manager.py  bayesian_optimizer.py  service_discovery.py
bagua/torch_api/: __init__.py  bucket.py  checkpointing.py  communication.py  compression.py  distributed.py  distributed_define.py  distributed_dev.py  env.py  exceptions.py  fuse_optimizer.py  globals.py  horovod_pack.py  tensor.py  utils.py
bagua_core/: __init__.py  _environment.py  bagua_install_deps.py
bagua_kernels/: add_dropout_residual.cpp  add_dropout_residual.cu  dropout.h  multihead_attention.cpp  multihead_attention_kernel.cu  multihead_attention_matmul1.cpp  multihead_attention_matmul1_kernel.cu  multihead_attention_matmul2.cpp  multihead_attention_matmul2_kernel.cu  multihead_attention_raw.cpp  multihead_attention_raw_kernel.cu  self_multihead_attention.cpp  self_multihead_attention_kernel.cu  self_multihead_attention_matmul1.cpp  self_multihead_attention_matmul1_kernel.cu  self_multihead_attention_matmul2.cpp  self_multihead_attention_matmul2_kernel.cu  self_multihead_attention_raw.cpp  self_multihead_attention_raw_kernel.cu  self_multihead_attention_score.cpp  self_multihead_attention_score_kernel.cu  setup.py  strided_batched_gemm.h
baguaelastic/distributed/: launch.py
docker/: Dockerfile  Dockerfile.manylinux-cuda102  Dockerfile.manylinux-cuda111  Dockerfile.manylinux-cuda113  Dockerfile.manylinux-cuda115  Dockerfile.manylinux-cuda116  Dockerfile.manylinux-cuda117  Dockerfile.pytorch-1.10.0-cuda11.3-cudnn8  Dockerfile.pytorch-1.11.0-cuda11.3-cudnn8  Dockerfile.pytorch-1.12.0-cuda11.3-cudnn8  Dockerfile.pytorch-1.13.0-cuda11.6-cudnn8  Dockerfile.pytorch-1.9.0-cuda10.2-cudnn7  Dockerfile.pytorch-1.9.0-cuda11.1-cudnn8  Dockerfile.pytorch-1.9.1-cuda11.1-cudnn8  Dockerfile.pytorch-2.0.0-cuda11.7-cudnn8
docs/: conf.py  doc-requirements.txt  doctree.rst  index.rst
docs/_autoapi_templates/: index.rst
docs/templates/: css.mako
examples/: LICENSE  README.md
examples/benchmark/: README.md  requirements.txt  synthetic_benchmark.py  synthetic_benchmark_ddp_compatible.py
examples/communication_primitives/: README.md  main.py  requirements.txt
examples/dense_sparse_hybrid/: main.py
examples/elastic_training/: README.md  main.py  main_ddp_compatible.py
examples/imagenet/: README.md  main.py  main_ddp_compatible.py  requirements.txt
examples/mnist/: README.md  main.py  main_ddp_compatible.py  requirements.txt
examples/moe/: README.md  main.py  mnist_main.py  mnist_main_ddp_compatible.py  requirements.txt
examples/squad/: README.md  main.py  main_ddp_compatible.py  requirements.txt
rust/bagua-core/bagua-core-c/: Cargo.toml
rust/bagua-core/bagua-core-c/src/: lib.rs
rust/bagua-core/bagua-core-internal/: Cargo.toml  build.rs
rust/bagua-core/bagua-core-internal/cpp/include/: bagua_utils.h  dbg.h
rust/bagua-core/bagua-core-internal/kernels/: bagua_kernels.cu
rust/bagua-core/bagua-core-internal/src/: cuda_utils.rs  lib.rs  torch_ffi.rs
rust/bagua-core/bagua-core-internal/src/comm_ops/: decentralized_full_precision_asynchronous.rs  decentralized_full_precision_synchronous.rs  decentralized_low_precision_synchronous.rs  mod.rs  python_ffi_op.rs
rust/bagua-core/bagua-core-internal/src/communicators/: mod.rs
rust/bagua-core/bagua-core-internal/src/datatypes/: mod.rs
rust/bagua-core/bagua-core-internal/src/kernels/: mod.rs
rust/bagua-core/bagua-core-internal/src/resource_pool/: mod.rs
rust/bagua-core/bagua-core-py/: Cargo.toml
rust/bagua-core/bagua-core-py/src/: lib.rs
rust/bagua-net/: Cargo.toml  README.md
rust/bagua-net/cc/: Makefile  bagua_net.h  nccl_types.h
rust/bagua-net/cc/v4/: nccl_net_v4.cc
rust/bagua-net/src/: interface.rs  utils.rs
rust/bagua-net/src/implement/: mod.rs  nthread_per_socket_backend.rs
tests/: __init__.py  test_bagua_define.py
xiangru_dev/: dev.py
(+176 files in other folders)
