[package]
name = "bagua-net"
version = "0.1.0"
authors = ["Jianbin Chang <shjwudp@gmail.com>"]
edition = "2018"
license = "MIT License Copyright (c) 2021 Kuaishou AI Platform & DS3 Lab"

[lib]
crate-type = ["cdylib"]

[dependencies]
nix = "0.22.1"
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
bytes = "1.0"
libc = "0.2"
ffi-convert = "0.5"
flume = "0.10"
socket2 = "0.4"
opentelemetry = { version = "0.16", features = [ "trace", "rt-async-std" ] }
opentelemetry-jaeger = { version = "*", features = ["rt-async-std", "collector_client", "isahc_collector_client"] }
