[package]
name = "bagua-core-c"
version = "0.1.2"
edition = "2018"

[lib]
name = "bagua_comm_core_c"
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
bagua-core-internal = { path = "../bagua-core-internal" }
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
color-eyre = "0.5"
numpy = "0.14.1"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
openssl-sys = { version = "*", features = ["vendored"] }

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[build-dependencies]
shadow-rs = "0.6"
cpp_build = "0.5"
cc = "1.0"
cmd_lib = "1.0"
which = "4.2"
