[package]
name = "bagua-core-c"
version = "0.1.2"
edition = "2021"

[lib]
name = "bagua_comm_core_c"
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
bagua-core-internal = { path = "../bagua-core-internal" }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
anyhow = "1.0"
color-eyre = "0.5"
numpy = "0.13"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
openssl-sys = { version = "*", features = ["vendored"] }
log = { version = "0.4.8", features = ["std"] }
env_logger = "*"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]

[build-dependencies]
shadow-rs = "0.8"
cpp_build = "0.5"
cc = "1.0"
cmd_lib = "1.0"
which = "4.1"
