[package]
name = "bagua-core-internal"
version = "0.1.2"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"
publish = ["private"]
build = "build.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
thiserror = "1"
base64 = "0.13"
itertools = "0.10"
shadow-rs = "0.7"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
hashbrown = "0.11"
flume = "0.10"
derivative = "2.2.0"
oneshot = "0.1"
cpp = "0.5"
sized-object-pool = "0.2"
dynamic-pool = "0.2"
once_cell = "1.7"
ndarray = "0.15.3"
serde = { version = "1", features = ["derive"] }
scheduled-thread-pool = "0.2"
serde_json = "1.0"
ureq = "2.2"
num-traits = "0.2"
num-derive = "0.3"
display_utils = "0.4.0"
opentelemetry = { version = "0.15", features = ["serialize", "metrics"] }
bagua-opentelemetry = { path = "../bagua-opentelemetry" }

[dependencies.pyo3]
version = "0.14.5"
features = ["auto-initialize"]

[build-dependencies]
shadow-rs = "0.7"
cmake = "0.1"
cpp_build = "0.5"
cc = "1.0"
cmd_lib = "1.2"
which = "4.2"
home = "0.5.3"
