[package]
name = "bagua-core-py"
version = "0.1.2"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2021"
publish = ["private"]

[lib]
name = "bagua_core_py"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bagua-core-internal = { path = "../bagua-core-internal" }
ndarray = "0.15.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
anyhow = "1.0"
color-eyre = "0.5"
numpy = "0.15.0"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
openssl-sys = { version = "*", features = ["vendored"] }
num-traits = "0.2"
num-derive = "0.3"

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[build-dependencies]
shadow-rs = "0.8"
cpp_build = "0.5"
cc = "1.0"
cmd_lib = "1.3"
which = "4.2"
